[project]
name = "llm-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grandalf>=0.8",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-mistralai>=1.1.1",
    "langgraph>=1.0.5",
    "openai>=2.14.0",
    "pydantic-settings>=2.12.0",
    "pygraphviz>=1.14",
    "wikipedia>=1.4.0",
]
